--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.0",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "bufferutil": "^4.0.9",
     "cors": "^2.8.5",
